addplans
